--- a/package.json
+++ b/package.json
@@ -11,16 +11,25 @@
     "aws-amplify": "^1.1.19",
     "aws-amplify-react-native": "^2.1.7",
     "axios": "^0.18.0",
+    "email-validator": "^2.0.4",
     "expo": "^32.0.0",
+    "lottie-react-native": "^2.6.1",
+    "os": "^0.1.1",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-confirmation-code-input": "^1.0.4",
     "react-native-elements": "^1.0.0",
+    "react-native-global-props": "^1.1.5",
+    "react-native-masked-text": "^1.12.0",
+    "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.2.3",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "util": "^0.11.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
