--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@expo/vector-icons": "^9.0.0",
     "aws-amplify": "^1.1.19",
     "aws-amplify-react-native": "^2.1.7",
+    "aws-sdk": "^2.437.0",
     "axios": "^0.18.0",
     "email-validator": "^2.0.4",
     "expo": "^32.0.0",
@@ -22,7 +23,7 @@
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-elements": "^1.0.0",
     "react-native-global-props": "^1.1.5",
-    "react-native-masked-text": "^1.12.0",
+    "react-native-masked-text": "^1.12.1",
     "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.2.3",
