--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-elements": "^1.0.0",
     "react-native-global-props": "^1.1.5",
+    "react-native-haptic-feedback": "^1.7.1",
     "react-native-masked-text": "^1.12.1",
     "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.3.0",
