--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-global-props": "^1.1.5",
     "react-native-haptic-feedback": "^1.7.1",
     "react-native-masked-text": "^1.12.1",
+    "react-native-snap-carousel": "^3.7.5",
     "react-native-star-rating": "^1.1.0",
     "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.3.0",
