adding graphql api for user Now user can create a customer and cook account seperatly. After login the app will take a cook and a customer to currect screens. updating customer main screen images, using curousel instead of flatlist. updated the font to system updated signup form

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,6 +1,6 @@
 {
 	"auth": {
-		"cognitof2dfea7a": {
+		"cognito54c2ea23": {
 			"service": "Cognito",
 			"providerPlugin": "awscloudformation"
 		}
