added Screen for new dish \ updated the cook main screen \ updated screen header component \ upated the cook action to add a new dish \ added a reducer for dishes state

--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "ios": "expo start --ios",
     "eject": "expo eject"
   },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
+  },
   "dependencies": {
     "@expo/vector-icons": "^9.0.0",
     "aws-amplify": "^1.1.19",
@@ -19,7 +24,9 @@
     "lottie-react-native": "^2.6.1",
     "os": "^0.1.1",
     "react": "16.5.0",
+    "react-input-mask": "^2.0.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-calendars": "^1.84.0",
     "react-native-confirmation-code-input": "^1.0.4",
     "react-native-elements": "^1.0.0",
     "react-native-global-props": "^1.1.5",
