--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "util": "^0.11.1",
+    "uuid": "^3.3.2",
     "winston": "^3.2.1",
     "yargs": "^13.2.2"
   },
