--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^9.0.0",
     "aws-amplify": "^1.1.19",
+    "aws-amplify-react": "^2.3.8",
     "aws-amplify-react-native": "^2.1.7",
     "aws-sdk": "^2.437.0",
     "axios": "^0.18.0",
