--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-masked-text": "^1.12.1",
     "react-native-snap-carousel": "^3.7.5",
     "react-native-star-rating": "^1.1.0",
+    "react-native-swipeout": "^2.3.6",
     "react-native-typography": "^1.4.0",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.2.3",
