--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "zen-observable": "^0.8.14"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.0.0"
+    "babel-preset-expo": "^5.0.0",
+    "reactotron-react-native": "^3.5.2"
   },
   "private": true
 }
